codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 2577
expression: popup
---
  Select Model and Effort
  OpenAI Codex, Ambient, and Z.AI plan-backed models

  [Coding Plans]  API Key Models

› 1. z-ai/glm-5.2 (current)     Ambient's default GLM 5.2 coding model.
  2. moonshotai/kimi-k2.7-code  Ambient's Kimi K2.7 Code model.
  3. glm-5.2                    GLM 5.2 through the Z.AI coding plan API.
  4. gpt-5.5                    Frontier model for complex coding, research,
                                and real-world work.
  5. claude-opus-4-8-plan       Claude Opus 4.8 through Claude Code
                                subscription auth in the Codex harness.
  6. claude-fable-5-plan        Claude Fable 5 through Claude Code
                                subscription auth in the Codex harness.

  Use Left/Right to switch groups. Press Enter to confirm or Esc to go back
